--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,2 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">My Places</string>
+    <string name="action_settings">Show Places</string>
+    <string name="btnMisLugares">My Places</string>
+    <string name="btnPreferencias">Preferences</string>
+    <string name="btnAcerca">About that...</string>
+    <string name="btnSalir">Exit</string>
+</resources>
