--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Lugares</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Preferencias</string>
     <string name="btnMisLugares">Mis lugares</string>
     <string name="btnPreferencias">Preferencias</string>
     <string name="btnAcerca">Acerca De</string>
